// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecordRepo find Handle fulltext search result 1`] = `
{
  "ctx": {
    "requestId": "123465",
    "userId": "0",
  },
  "query": {
    "_source": [Function],
    "bindVars": {
      "value0": "test_lib",
    },
    "query": "FOR r IN (fulltextSearchQuery)
SORT r.core_index.score DESC, r._key ASC
FILTER r.active == true
RETURN MERGE(r, {library: @value0})",
  },
  "withTotalCount": true,
}
`;

exports[`RecordRepo find Should find records 1`] = `
{
  "ctx": {
    "requestId": "123465",
    "userId": "0",
  },
  "query": {
    "_source": [Function],
    "bindVars": {
      "@value0": "test_lib",
      "value1": "test_lib",
    },
    "query": "FOR r IN (@@value0)
SORT r._key ASC
FILTER r.active == true
RETURN MERGE(r, {library: @value1})",
  },
  "withTotalCount": true,
}
`;

exports[`RecordRepo find with filters Should filter records - simple 1`] = `
{
  "ctx": {
    "requestId": "123465",
    "userId": "0",
  },
  "query": {
    "_source": [Function],
    "bindVars": {
      "@value0": "test_lib",
      "value1": "test_lib",
    },
    "query": "FOR r IN (@@value0)

FILTER (
( IS_ARRAY([object Object]) ? LENGTH([object Object][* FILTER <Condition>]) : <Condition> )
AND
( IS_ARRAY([object Object]) ? LENGTH([object Object][* FILTER <Condition>]) : <Condition> )
)
SORT r._key ASC
FILTER r.active == true
RETURN MERGE(r, {library: @value1})",
  },
  "withTotalCount": true,
}
`;

exports[`RecordRepo search should return search query 1`] = `
{
  "_source": [Function],
  "bindVars": {
    "value0": "indexField",
    "value1": "id",
    "value2": "analyzer",
  },
  "query": "FOR doc IN view SEARCH
ANALYZER(doc.@value0.@value1 LIKE TOKENS("%query%", @value2)[0], @value2)
RETURN MERGE(doc, {@value0: MERGE(doc.@value0, {score: BM25(doc)})})",
}
`;
